<!--
  ~ Copyright (C) 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">Views App</string>
    <string name="hello_world">Hello World!</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="arabic">Arabic</string>
    <string name="japanese">Japanese</string>
    <string name="spanish">Spanish</string>
    <string name="chinese">Chinese</string>
</resources>