<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSelectedLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"/>

    <Button
        android:id="@+id/btnSelectEnglish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectHindi"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnSelectHindi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hindi"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnSelectEnglish"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectArabic"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnSelectArabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/arabic"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnSelectHindi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnSelectJapanese"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/japanese"
        app:layout_constraintBottom_toTopOf="@id/btnSelectEnglish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectSpanish"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/btnSelectSpanish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/spanish"
        app:layout_constraintBottom_toTopOf="@id/btnSelectEnglish"
        app:layout_constraintStart_toEndOf="@id/btnSelectJapanese"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectXxYy"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/btnSelectXxYy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/chinese"
        app:layout_constraintBottom_toTopOf="@id/btnSelectEnglish"
        app:layout_constraintStart_toEndOf="@id/btnSelectSpanish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>